# AutoClicker

./: .gitignore  CMakeLists.txt  LICENSE
includes/: raygui.h  utils.h
resources/: README.txt  layout_name.rgl
src/: Rayclicker.c  main.c
